Fix video player displaying a vertical scrollbar when context menu outside player container (#6075)
Horizontal overflow is already being hidden to fix an issue returning from fullscreen.
This commit makes it so vertical overflow is hidden too in case the context menu is made visible but reaches outside the video player container.

--- a/src/renderer/components/ft-shaka-video-player/ft-shaka-video-player.css
+++ b/src/renderer/components/ft-shaka-video-player/ft-shaka-video-player.css
@@ -12,8 +12,9 @@
   /*
     Fixes the seek bar thumbnails causing a horizontal scroll bar
     to appear after exiting full screen and full window.
+    But also vertically in case context menu overflows.
   */
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .player {
